--- a/src/index.pug
+++ b/src/index.pug
@@ -12,72 +12,75 @@ html(lang="en")
     .wrapper
       .maincontent
         .welcome-section
-          section.hero
-            .container.hero__container
-              header.header
-                .logo ТЖ
-                .header__menu
-                  nav.nav
-                    ul.nav__list
-                      - var menu = ['Главная', 'Обо мне', 'Навыки', 'Работы', 'Отзывы', 'Связаться'];
-                      each item in menu
-                        li.nav__item
-                          a(href="").nav__link #{item}
-                .header__links
-                  ul.socials
-                    - var socials = ['insta', 'vk', 'github'];
-                    each item in socials
-                      li.socials__item
-                        a(href="").socials__link
-                          +icon(`${item}`, 'socials__icon')
-              .hero__content
-                .user-info
-                  .user-info__desc 
-                    p Личный сайт 
-                    p веб разработчика
-                  .user-info__name 
-                    p Татьяна 
-                    p Жевак
-              .hero__bottom-buttons
-                .scroll-down-button Скролл
-                  +icon(`scroll`, 'scroll-down__icon')
-          section.about
-            .container.about__container
-              .about__left
-                .user
-                  .user__avatar(
-                  style = `background-image: url(${require(`images/content/avatar.jpg`)})`
-                  )
-                  .user__data
-                    table.user__data-table
-                      -
-                        var data = [
-                        ['Проживаю:', 'Москва'],
-                        ['Возраст:', '23 года'],
-                        ['Родилась:', '13 октября 1995'],
-                        ]
-                      each row in data
-                        tr.user__data-row
-                          td.user__data-cell.user__data-cell-opacity #{row[0]}
-                          td.user__data-cell #{row[1]}
-              article.about__right
-                .about__welcome.simple-text Привет, меня зовут
-                .about__username Татьяна Жевак
-                .about__desc.simple-text
-                  p Я занимаюсь разработкой современных сайтов и приложений. 
-                  p Мне нравится делать интересные и современные проекты.
-                .about__ps
-                  span * 
-                  p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-          .triangles
-            svg.triangles__item.triangles__item--left(viewBox="0 0 1000 100" preserveAspectRatio="none")
-              polygon(
-                points="0,0 0,100 1000,100"
-              )
-            svg.triangles__item.triangles__item--right(viewBox="0 0 1000 100" preserveAspectRatio="none")
-              polygon(
-                points="0,100 1000,100 1000,0"
-              )
+          .welcome-section__img(
+          style = `background-image: url(${require(`images/content/section1.jpg`)})`
+          )
+            section.hero
+              .container.hero__container
+                header.header
+                  .logo ТЖ
+                  .header__menu
+                    nav.nav
+                      ul.nav__list
+                        - var menu = ['Главная', 'Обо мне', 'Навыки', 'Работы', 'Отзывы', 'Связаться'];
+                        each item in menu
+                          li.nav__item
+                            a(href="").nav__link #{item}
+                  .header__links
+                    ul.socials
+                      - var socials = ['insta', 'vk', 'github'];
+                      each item in socials
+                        li.socials__item
+                          a(href="").socials__link
+                            +icon(`${item}`, 'socials__icon')
+                .hero__content
+                  .user-info
+                    .user-info__desc 
+                      p Личный сайт 
+                      p веб разработчика
+                    .user-info__name 
+                      p Татьяна 
+                      p Жевак
+                .hero__bottom-buttons
+                  .scroll-down-button Скролл
+                    +icon(`scroll`, 'scroll-down__icon')
+            section.about
+              .container.about__container
+                .about__left
+                  .user
+                    .user__avatar(
+                    style = `background-image: url(${require(`images/content/avatar.jpg`)})`
+                    )
+                    .user__data
+                      table.user__data-table
+                        -
+                          var data = [
+                          ['Проживаю:', 'Москва'],
+                          ['Возраст:', '23 года'],
+                          ['Родилась:', '13 октября 1995'],
+                          ]
+                        each row in data
+                          tr.user__data-row
+                            td.user__data-cell.user__data-cell-opacity #{row[0]}
+                            td.user__data-cell #{row[1]}
+                article.about__right
+                  .about__welcome.simple-text Привет, меня зовут
+                  .about__username Татьяна Жевак
+                  .about__desc.simple-text
+                    p Я занимаюсь разработкой современных сайтов и приложений. 
+                    p Мне нравится делать интересные и современные проекты.
+                  .about__ps
+                    span * 
+                    p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+            .triangles
+              svg.triangles__item.triangles__item--left(viewBox="0 0 1000 100" preserveAspectRatio="none")
+                polygon(
+                  points="0,0 0,100 1000,100"
+                )
+              svg.triangles__item.triangles__item--right(viewBox="0 0 1000 100" preserveAspectRatio="none")
+                polygon(
+                  points="0,100 1000,100 1000,0"
+                )
         section.values
           .container.values__container
             .values__title
