--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -23,10 +23,11 @@
 
 .scroll-down-button {
   display: flex;
+  align-items: center;
 }
 
 .scroll-down__icon {
-  width: 20px;
+  width: 40px;
   height: 30px;
 }
 
