--- a/src/index.pug
+++ b/src/index.pug
@@ -105,18 +105,13 @@ html(lang="en")
                         each skill in item[1]
                           li.skills-row__item
                             .skill
-                              svg(viewBox="0 0 100 100" class="progress__shape" preserveAspectRatio="none")
-                                defs
-                                  linear-gradient#gradient(
-                                    x1='0' y1='0' x2='0' y2="100%")
-                                    stop(offset='0%', stop-color='#5500f2')
-                                    stop(offset='100%', stop-color='#8f00ef')
-                                circle(r="40" cx="50" cy="50").progress__circle.progress__circle-under
-                                circle(r="40" cx="50" cy="50"
-                              stroke="url(#gradient)"
-                              transform="rotate(-180 50 50)"
-                              stroke-dashoffset=`${item.progress}`).progress__circle.progress__circle-above
-                                  span.progress__title #{skill}
+                              svg(viewBox="0 0 100 100").skill__circle-shape
+                                linear-gradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
+                                  stop(offset='0%', stop-color='#5500f2')
+                                  stop(offset='100%', stop-color='#8f00ef')
+                                circle(cx="50" cy="50" r="40").skill__circle.skill__circle_under
+                                circle(cx="50" cy="50" r="40" stroke="url(#gradient)" stroke-width="6" fill="none" transform='rotate(90 50 50)').skill__circle.skill__circle_above
+                              .skill__circle-text #{skill}
         section.works
           .container
             .section-title Мои работы
