--- a/src/index.pug
+++ b/src/index.pug
@@ -19,12 +19,10 @@ html(lang="en")
               header.header
                 .logo ТЖ
                 .header__menu
-                  nav.nav
-                    ul.nav__list
-                      - var menu = ['Главная', 'Обо мне', 'Навыки', 'Работы', 'Отзывы', 'Связаться'];
-                      each item in menu
-                        li.nav__item
-                          a(href="").nav__link #{item}
+                  include components/nav
+                  +nav
+                  ul.nav__list
+                    - var menu = ['whyyyyyy????'];
                 .header__links
                   ul.socials
                     - var socials = ['insta', 'vk', 'github'];
