--- a/src/styles/blocks/nav.pcss
+++ b/src/styles/blocks/nav.pcss
@@ -2,3 +2,11 @@
   display: flex;
   align-items: center;
 }
+
+.nav__item {
+  margin-right: 60px;
+
+  &:last-child{
+    margin-right: 0;
+  }
+}
