--- a/src/styles/blocks/nav.pcss
+++ b/src/styles/blocks/nav.pcss
@@ -1,12 +1,14 @@
-.nav__list {
-  display: flex;
-  align-items: center;
-}
+.nav {
+  &__list {
+    display: flex;
+    align-items: center;
+  }
 
-.nav__item {
-  margin-right: 60px;
-
-  &:last-child{
-    margin-right: 0;
+  &__item {
+    margin-right: 60px;
+      
+      &:last-child{
+      margin-right: 0;
+      }
   }
 }
