--- a/src/index.pug
+++ b/src/index.pug
@@ -19,17 +19,11 @@ html(lang="en")
               header.header
                 .logo ТЖ
                 .header__menu
-                  include components/nav
-                  +nav
-                  ul.nav__list
-                    - var menu = ['whyyyyyy????'];
+                  include templates/components/nav
+                  +nav('nav--color-blue')
                 .header__links
-                  ul.socials
-                    - var socials = ['insta', 'vk', 'github'];
-                    each item in socials
-                      li.socials__item
-                        a(href="").socials__link
-                          +icon(`${item}`, 'socials__icon')
+                  include templates/components/socials
+                  +socials()
               .hero__content
                 .user-info
                   .user-info__desc 
@@ -175,20 +169,12 @@ html(lang="en")
                 .copyright__desc Личный сайт веб-разработчика
             .footer__data
               .footer__menu
-                nav.nav.nav--color-white
-                  ul.nav__list
-                    each item in menu
-                      li.nav__item
-                        a(href="").nav__link #{item}
               .footer__data-columns
                 .footer__data-col
                   article.footer__text
                     p Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
-                  .footer__socials.socials.socials--rounded
-                    each item in socials
-                     li.socials__item
-                        a(href="").socials__link
-                          +icon(`${item}`, 'socials__icon')
+                  include templates/components/socials
+                  +socials('footer__socials socials--rounded')
                 .footer__data-col
                   article.footer__text
                     p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
