--- a/src/index.pug
+++ b/src/index.pug
@@ -74,36 +74,35 @@ html(lang="en")
               )
         section.values
           .container.values__container
-            .values__title
-              h2.section-title.values__title-text.section-title--small Чем я могу быть полезен вам
-            .values-part
-              .values-left
-                .values-left__pic(
-                    style = `background-image: url(${require(`images/content/bag.jpg`)})`
-                    )
-              .values-right
-                article.values__desc.simple-text
-                  p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-                ul.user-skills
-                  -
-                    var skills = [
-                      ['Front-end', ['HTML5', 'CSS3', 'Javascript', 'Jquery и Vue.js']],
-                      ['Workflow', ['GIT', 'Terminal', 'Gulp', 'Webpack']],
-                    ]
-                  each item in skills
-                    li.user-skills__item.skills-row
-                      .skills-row__title.section-title.section-title--small #{item[0]}
-                      ul.skills-row__list
-                        each skill in item[1]
-                          li.skills-row__item
-                            .skill
-                              svg(viewBox="0 0 100 100").skill__circle-shape
-                                linear-gradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
-                                  stop(offset='0%', stop-color='#5500f2')
-                                  stop(offset='100%', stop-color='#8f00ef')
-                                circle(cx="50" cy="50" r="40").skill__circle.skill__circle_under
-                                circle(cx="50" cy="50" r="40" stroke="url(#gradient)" stroke-width="6" fill="none" transform='rotate(90 50 50)').skill__circle.skill__circle_above
-                              .skill__circle-text #{skill}
+            .values__wrapper
+              .values__title
+                .values__title-container
+                  .values__title-text Чем я могу быть полезен вам
+                  .values__content
+                    p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+              .values__widget
+                .values__widget-container
+                  ul.skills
+                    -
+                      var skills = [
+                        ['Front-end', ['HTML5', 'CSS3', 'Javascript', 'Jquery и Vue.js']],
+                        ['Workflow', ['GIT', 'Terminal', 'Gulp', 'Webpack']],
+                      ]
+                    each item in skills
+                      li.skills__item
+                        .skills-row
+                          .skills-row__title #{item[0]}
+                          ul.skills-row__list
+                            each skill in item[1]
+                              li.skills-row__item
+                                .skill
+                                  svg(viewBox="0 0 100 100").skill__circle-shape
+                                    circle(cx="50" cy="50" r="40").skill__circle.skill__circle_under
+                                    circle(cx="50" cy="50" r="40" stroke="url(#gradient)" stroke-width="6" fill="none" transform='rotate(90 50 50)').skill__circle.skill__circle_above
+                                    linearGradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
+                                      stop(offset='0%', stop-color='#5500f2')
+                                      stop(offset='100%', stop-color='#8f00ef')
+                                  .skill__circle-text #{skill}
         section.works
           .container
             .section-title Мои работы
