--- a/src/styles/blocks/skills-row.pcss
+++ b/src/styles/blocks/skills-row.pcss
@@ -1,12 +1,23 @@
-.skills-row__title {
-  margin-bottom: 50px;
+.skills-row {
+  
+  &__title {
+    margin-bottom: 26px;
+    font-size: 24px;
+    font-weight: 700;
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -4%;
+
+    @include phones {
+      justify-content: center;
+    }
+  }
+
+  &__item {
+    margin-left: 4%;
+  }
 }
 
-.skills-row__item {
-  margin-right: 40px;
-  margin-bottom: 50px;
-}
-
-.skills-row__list {
-  display: flex;
-}
