--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -1,7 +1,7 @@
 .skill {
   position: relative;
-  width: 166px;
-  height: 166px;
+  width: 134px;
+  height: 134px;
 
   @include tablets {
     width: 135px;
@@ -26,13 +26,14 @@
 
 .skill__circle-text {
   position: absolute;
-  top: 500%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-weight: bold;
   font-size: 18px;
   color: rgba($text-color, .5);
   padding: 14px;
+  text-align: center;
 
   @include phones {
     font-size: 16px;
