--- a/src/index.pug
+++ b/src/index.pug
@@ -63,25 +63,24 @@ html(lang="en")
                 .about__ps
                   span * 
                   p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-          .triangles
-            svg.triangles__item.triangles__item--left(viewBox="0 0 1000 100" preserveAspectRatio="none")
-              polygon(
-                points="0,0 0,100 1000,100"
-              )
-            svg.triangles__item.triangles__item--right(viewBox="0 0 1000 100" preserveAspectRatio="none")
-              polygon(
-                points="0,100 1000,100 1000,0"
-              )
-        section.values
-          .container.values__container
-            .values__wrapper
-              .values__title
-                .values__title-container
-                  .values__title-text Чем я могу быть полезен вам
-                  .values__content
+          .triangles.triangles_top
+            svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
+              polygon(points="0,0 0,100 1000,100")
+            svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_right
+              polygon(points="0,100 1000,100 1000,0")
+        .middle-section.container
+          section.values
+            .container.values__container
+              .values-part
+                .values-left
+                  .values-left__pic(
+	                  style = `background-image: url(${require(`images/content/bag.jpg`)})`
+	                )
+                .values-right
+                  .values__title
+                    h2.section-title.values__title-text.section-title--small Чем я могу быть полезен вам
+                  article.values__desc.simple-text
                     p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-              .values__widget
-                .values__widget-container
                   ul.skills
                     -
                       var skills = [
@@ -90,9 +89,9 @@ html(lang="en")
                       ]
                     each item in skills
                       li.skills__item
-                        .skills-row
-                          .skills-row__title #{item[0]}
-                          ul.skills-row__list
+                        .skills-row__title #{item[0]}
+                        ul.skills-row__list
+                          .skills-wraper
                             each skill in item[1]
                               li.skills-row__item
                                 .skill
@@ -103,35 +102,39 @@ html(lang="en")
                                       stop(offset='0%', stop-color='#5500f2')
                                       stop(offset='100%', stop-color='#8f00ef')
                                   .skill__circle-text #{skill}
-        section.works
-          .container
-            .section-title Мои работы
-            .works-left
-              .works-slider__preview
-              ul.works-slider__full-pics
-                - var pics = ['1', '2', '3'];
-                each item in pics
-                  li.works-slider__full-pic(
-                  style = `background-image: url(${require(`images/content/${item}.jpg`)})`
-                  data-slide="1"
-                  )
-                li.works-slider__full-pic.active(
-                  style = `background-image: url(${require(`images/content/4.jpg`)})`
-                  data-slide="1"
-                  )
-
-            .works-right
-              .works__skills
-                - var skill = ['HTML', 'CSS', 'Javascript'];
-                each item in skill
-                  .works__skill #{item}
-              .works-right__title 
-                h3.section-title Сайт школы образования
-              .works-right__desc.simple-text
-                p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-              a(href="#").works__link
-                +icon('link', 'link-icon')
-                span Посмотреть сайт
+          section.works
+            .container
+              .section-title Мои работы
+              .works-left
+                .works-slider__preview
+                ul.works-slider__full-pics
+                  - var pics = ['1', '2', '3'];
+                  each item in pics
+                    li.works-slider__full-pic(
+                    style = `background-image: url(${require(`images/content/${item}.jpg`)})`
+                    data-slide="1"
+                    )
+                  li.works-slider__full-pic.active(
+                    style = `background-image: url(${require(`images/content/4.jpg`)})`
+                    data-slide="1"
+                    )
+              .works-right
+                .works__skills
+                  - var skill = ['HTML', 'CSS', 'Javascript'];
+                  each item in skill
+                    .works__skill #{item}
+                .works-right__title 
+                  h3.section-title Сайт школы образования
+                .works-right__desc.simple-text
+                  p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+                a(href="#").works__link
+                  +icon('link', 'link-icon')
+                  span Посмотреть сайт
+        .triangles.triangles_bottom
+          svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
+            polygon(points="0,0 1000,0 1000,100")
+          svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_right
+            polygon(points="0,0 0,100 1000,0")
         section.slider
         .bottom-section
           section.reviews
