--- a/src/styles/blocks/triangles.pcss
+++ b/src/styles/blocks/triangles.pcss
@@ -1,21 +1,42 @@
 .triangles {
   position: relative;
-  height: 130px;
-  margin-top: 80px;
+  height: 100px;
+
+  &_top {
+    margin-top: 80px;
+    height: 130px;
+
+    @include phones {
+      height: 40px;
+      margin-top: -40px;
+    }
+  }
+
+  &_bottom {
+    margin-bottom: -90px;
+    height: 90px;
+
+    @include phones {
+      height: 40px;
+      margin-bottom: -40px;
+    }
+  }
 }
 
-.triangles__item {
+.triangles__shape {
+  position: absolute;
+  top: 0;
+  bottom: 0;
   display: block;
   width: 50%;
-  position: absolute;
   height: 100%;
   fill: #fff;
 
-  &--left {
+  &_left {
     left: 0;
   }
 
-  &--right {
+  &_right {
     right: 0;
   }
 }
