--- a/src/styles/blocks/values.pcss
+++ b/src/styles/blocks/values.pcss
@@ -1,84 +1,43 @@
 .values{
-  margin-bottom: 114px;
+	  &__container {
+	    height: 1000px;
+	    display: flex;
+	    width: 100%;
+	    flex-direction: column;
+	  }
+	
+	  &-part {
+	    display: flex;
+	    justify-content: center;
+	  }
+	
+	  &-left{
+          &__pic {
+	      width: 560px;
+	      height: 627px;
+	      background-size: cover;
+	      background-position: center center;
+	      background-repeat: no-repeat;
+        margin-top: 77px;
+	    }
+	  }
+    
+	  &-right {
+	    margin-bottom: 0px;
+      margin-right: 150px;
+	  }
+	
+	  &__title {	
+	    &-text {
+	        margin-bottom: 60px;
+	    }
+	  }
+	
+	  &__desc {
+	    margin-bottom: 40px;
+	  }
+	}
 
-  @include phones {
-    margin-bottom: 75px;
-  }
-}
-
-.values__container {
-  position: relative;
-
-  @include tablets {
-    padding-bottom: 350px;
-  }
-
-  &:before {
-    content: "";
-    position: absolute;
-    background: url('~images/content/bag.jpg') left bottom / contain no-repeat;
-    display: block;
-    bottom: 5%;
-    height: 79%;
-    width: 69%;
-    left: -20%;
-
-    @include tablets {
-      bottom: 0;
-      left: 50%;
-      height: 300px;
-      transform: translateX(-50%);
-      background-position: center center;
-    }
-
-    @include phones {
-      width: 100%;
-    }
-  }
-}
-
-.values__wrapper {
-  position: relative;
-}
-
-.values__title {
-  margin-bottom: 82px;
-  display: flex;
-  justify-content: center;
-}
-
-.values__title-container {
-  width: 38%;
-  margin-left: 6%;
-
-  @include desktop {
-    width: 42%;
-    margin-left: 0;
-  }
-
-  @include tablets {
-    width: 68%;
-    text-align: center;
-  }
-
-  @include phones {
-    width: 100%;
-    margin-left: 0;
-    text-align: left;
-  }
-}
-
-.values__title-text {
-  font-size: 30px;
-  font-weight: 700;
-  margin-bottom: 55px;
-}
-
-.values__content {
-  color: rgba($text-color, .5);
-  font-weight: 600;
-  line-height: 1.8;
-}
 
 .values__widget {
   display: flex;
