--- a/src/index.pug
+++ b/src/index.pug
@@ -81,55 +81,13 @@ html(lang="en")
                     h2.section-title.values__title-text.section-title--small Чем я могу быть полезен вам
                   article.values__desc.simple-text
                     p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-                  ul.skills
-                    -
-                      var skills = [
-                        ['Front-end', ['HTML5', 'CSS3', 'Javascript', 'Jquery и Vue.js']],
-                        ['Workflow', ['GIT', 'Terminal', 'Gulp', 'Webpack']],
-                      ]
-                    each item in skills
-                      li.skills__item
-                        .skills-row__title #{item[0]}
-                        ul.skills-row__list
-                          .skills-wraper
-                            each skill in item[1]
-                              li.skills-row__item
-                                .skill
-                                  svg(viewBox="0 0 100 100").skill__circle-shape
-                                    circle(cx="50" cy="50" r="40").skill__circle.skill__circle_under
-                                    circle(cx="50" cy="50" r="40" stroke="url(#gradient)" stroke-width="6" fill="none" transform='rotate(90 50 50)').skill__circle.skill__circle_above
-                                    linearGradient(id="gradient" x1="0%" y1="0%" x2="100%" y2="0")
-                                      stop(offset='0%', stop-color='#5500f2')
-                                      stop(offset='100%', stop-color='#8f00ef')
-                                  .skill__circle-text #{skill}
+                  .values__widget
+                    #skills-component
           section.works
-            .container
-              .section-title Мои работы
-              .works-left
-                .works-slider__preview
-                ul.works-slider__full-pics
-                  - var pics = ['1', '2', '3'];
-                  each item in pics
-                    li.works-slider__full-pic(
-                    style = `background-image: url(${require(`images/content/${item}.jpg`)})`
-                    data-slide="1"
-                    )
-                  li.works-slider__full-pic.active(
-                    style = `background-image: url(${require(`images/content/4.jpg`)})`
-                    data-slide="1"
-                    )
-              .works-right
-                .works__skills
-                  - var skill = ['HTML', 'CSS', 'Javascript'];
-                  each item in skill
-                    .works__skill #{item}
-                .works-right__title 
-                  h3.section-title Сайт школы образования
-                .works-right__desc.simple-text
-                  p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-                a(href="#").works__link
-                  +icon('link', 'link-icon')
-                  span Посмотреть сайт
+            .works__container
+              .section-title.works__section-title Мои работы
+              .works__content
+                #slider-component
         .triangles.triangles_bottom
           svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
             polygon(points="0,0 1000,0 1000,100")
@@ -181,3 +139,6 @@ html(lang="en")
                   article.footer__text
                     p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
                     p Martin Golding
+    include ./templates/entry.pug
+
+                
