--- a/src/index.pug
+++ b/src/index.pug
@@ -70,7 +70,7 @@ html(lang="en")
               polygon(points="0,100 1000,100 1000,0")
         .middle-section.container
           section.values
-            .container.values__container
+            .values__container
               .values-part
                 .values-left
                   .values-left__pic(
