--- a/src/index.pug
+++ b/src/index.pug
@@ -88,17 +88,18 @@ html(lang="en")
               .section-title.works__section-title Мои работы
               .works__content
                 #slider-component
-        .triangles.triangles_bottom
-          svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
-            polygon(points="0,0 1000,0 1000,100")
-          svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_right
-            polygon(points="0,0 0,100 1000,0")
-        section.slider
         .bottom-section
-          section.reviews
+          .triangles.triangles_bottom
+            svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
+              polygon(points="0,0 1000,0 1000,100")
+            svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_right
+              polygon(points="0,0 0,100 1000,0")
+          section.reviews.container
             .reviews__title
               .section-title Что обо мне говорят
               .reviews__slider-controls
+                a(href="#").reviews__slider-control.reviews__slider-control_next
+                a(href="#").reviews__slider-control.reviews__slider-control_prev
             ul.reviews__slider
               li.reviews__slider-item
                 .quote
@@ -119,26 +120,55 @@ html(lang="en")
                           .user__name #{row[0]}
                           .user__occ #{row[1]}
                 li.reviews__slider-item
-          section.form
+          section.form.container
+            .form
+              .section-title.contacts__form-title Связаться со мной
+              form.form__elem
+                .form__row
+                  -
+                    var fields = [
+                      ['user', 'Введите ваше имя', 'Ковальчук Дмитрий'],
+                      ['envelope', 'Введите ваш email', 'loftschool@study.com'],
+                    ]
+                  each item in fields
+                    label.form-block(data-title=item[1])
+                      .form-block__container
+                        +icon(`${item[0]}`, 'form-block__icon') 
+                        .form-block__field
+                          input(type="text" placeholder=item[2]).form-block__input
+                .form__row.form__row--extra-margin
+                  label.form-block(data-title="Сообщение к письму")
+                    .form-block__container.form-block__container_align_top
+                      +icon('message', 'form-block__icon') 
+                      .form-block__field
+                        textarea(
+                          placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопроса"
+                        ).form-block__input
+                .from__row
+                  input(type="submit" value="отправить").gradient-btn.form__submit
         footer.footer
           .container.footer__container
             .footer__copyright
-              .copyright
-                .copyright__year 2019
-                .copyright__username Татьяна Жевак
-                .copyright__desc Личный сайт веб-разработчика
+              .footer__copyright-col
+                .footer__copyright-year &copy; 2019
+              .footer__copyright-userinfo
+                .footer__copyright-name Татьяна Жевак
+                .footer__data-text Личный сайт веб-разработчика
             .footer__data
-              .footer__menu
-              .footer__data-columns
+              include templates/components/nav
+              +nav('nav--color-white')
+              .footer__data-content
                 .footer__data-col
                   article.footer__text
                     p Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
-                  include templates/components/socials
-                  +socials('footer__socials socials--rounded')
+                  .footer__data-socials
+                    include templates/components/socials
+                    +socials('footer__socials socials--rounded')
                 .footer__data-col
-                  article.footer__text
-                    p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
-                    p Martin Golding
+                  .text-quote
+                    article.text-quote__text
+                      p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
+                    .text-quote__author Martin Golding
     include ./templates/entry.pug
 
                 
