--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -1,3 +1,50 @@
 .reviews__title {
-  margin-bottom: 30px;
+  margin-top: 260px;
+}
+
+.reviews__slider-control{
+  width: 65px;
+  height: 51px;
+  display: block;
+  position: relative;
+  &:before {
+    content: "";
+    background: svg-load('arrow-down.svg', fill=#414c63, width=100%, height=100%) center center no-repeat;
+    display: block;
+    width: 8px;
+    height: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-180deg);
+    transition: opacity .3s, margin-top .3s;
+    opacity: 1;
+          border: 1px solid #ccc;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      position: relative;
+  }
+  &:hover {
+    &:before {
+      opacity: .3;
+    }
+  }
+  &_prev {
+    &:before {
+      transform: translate(-50%, -50%) ;
+    }
+    &:active {
+      &:before {
+        margin-top: 3px;
+      }
+    }
+  }
+  &_next {
+    &:active {
+      &:before {
+        margin-top: -3px;
+      }
+    }
+  }
 }
