--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -4,7 +4,7 @@
 
   &--rounded {
     .socials__link {
-      border: 1px solid #ccc;
+      border: 1px solid $text-color;;
       border-radius: 50%;
       width: 50px;
       height: 50px;
@@ -38,4 +38,10 @@
   width: 25px;
   height: 31px;
   display: block;
+}
+
+.socials__icon {
+  width: 25px;
+  height: 25px;
+  fill: $text-color;
 }
