--- a/src/templates/components/works.pug
+++ b/src/templates/components/works.pug
@@ -46,7 +46,7 @@ script(type="text/x-template")#slider-info
     .works-slider__desc
       p {{currentWork.desc}}
     .works-slider__link
-      a(:href="currentWork.link").iconed-link Посмотреть слайд
+      a(:href="currentWork.link").iconed-link Open the web site
 
 script(type="text/x-template")#slider-tags
   ul.works-slider__tags
