--- a/src/index.pug
+++ b/src/index.pug
@@ -17,7 +17,7 @@ html(lang="en")
           section.hero
             .container.hero__container
               header.header
-                .logo ТЖ
+                .logo TZ
                 .header__menu
                   include templates/components/nav
                   +nav('nav--color-blue')
@@ -27,13 +27,13 @@ html(lang="en")
               .hero__content
                 .user-info
                   .user-info__desc 
-                    p Личный сайт 
-                    p веб разработчика
+                    p Personal
+                    p web site
                   .user-info__name 
-                    p Татьяна 
-                    p Жевак
+                    p Tatiana 
+                    p Zhevak
               .hero__bottom-buttons
-                .scroll-down-button Скролл
+                .scroll-down-button Scroll
                   +icon(`scroll`, 'scroll-down__icon')
           section.about
             .container.about__container
@@ -46,23 +46,22 @@ html(lang="en")
                     table.user__data-table
                       -
                         var data = [
-                        ['Проживаю:', 'Москва'],
-                        ['Возраст:', '23 года'],
-                        ['Родилась:', '13 октября 1995'],
+                        ['Location:', 'Gold Coast'],
+                        ['Age:', '24 y.o.'],
+                        ['DOB:', '13 October 1995'],
                         ]
                       each row in data
                         tr.user__data-row
                           td.user__data-cell.user__data-cell-opacity #{row[0]}
                           td.user__data-cell #{row[1]}
               article.about__right
-                .about__welcome.simple-text Привет, меня зовут
-                .about__username Татьяна Жевак
+                .about__welcome.simple-text Hi, my name is
+                .about__username Tatiana Zhevak
                 .about__desc.simple-text
-                  p Я занимаюсь разработкой современных сайтов и приложений. 
-                  p Мне нравится делать интересные и современные проекты.
+                  p and I want to start my developer career
                 .about__ps
                   span * 
-                  p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+                  p I have created this CV to show what I can do as a web developer (I'm still working on improvements)
           .triangles.triangles_top
             svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
               polygon(points="0,0 0,100 1000,100")
@@ -78,14 +77,14 @@ html(lang="en")
 	                )
                 .values-right
                   .values__title
-                    h2.section-title.values__title-text.section-title--small Чем я могу быть полезен вам
+                    h2.section-title.values__title-text.section-title--small My skills
                   article.values__desc.simple-text
-                    p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+                    p  
                   .values__widget
                     #skills-component
           section.works
             .works__container
-              .section-title.works__section-title Мои работы
+              .section-title.works__section-title My web projects 
               .works__content
                 #slider-component
         .bottom-section
@@ -94,7 +93,7 @@ html(lang="en")
               polygon(points="0,0 1000,0 1000,100")
             svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_right
               polygon(points="0,0 0,100 1000,0")
-          section.reviews.container
+          <!--section.reviews.container
             .reviews__title
               .section-title Что обо мне говорят
               .reviews__slider-controls
@@ -119,16 +118,16 @@ html(lang="en")
                         each row in author
                           .user__name #{row[0]}
                           .user__occ #{row[1]}
-                li.reviews__slider-item
+                li.reviews__slider-item -->
           section.form.container
             .form
-              .section-title.contacts__form-title Связаться со мной
+              .section-title.contacts__form-title Contact Me
               form.form__elem
                 .form__row
                   -
                     var fields = [
-                      ['user', 'Введите ваше имя', 'Ковальчук Дмитрий'],
-                      ['envelope', 'Введите ваш email', 'loftschool@study.com'],
+                      ['user', 'Your name', ''],
+                      ['envelope', 'Your email', ''],
                     ]
                   each item in fields
                     label.form-block(data-title=item[1])
@@ -137,38 +136,38 @@ html(lang="en")
                         .form-block__field
                           input(type="text" placeholder=item[2]).form-block__input
                 .form__row.form__row--extra-margin
-                  label.form-block(data-title="Сообщение к письму")
+                  label.form-block(data-title="Your message")
                     .form-block__container.form-block__container_align_top
                       +icon('message', 'form-block__icon') 
                       .form-block__field
                         textarea(
-                          placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопроса"
+                          placeholder=""
                         ).form-block__input
                 .from__row
-                  input(type="submit" value="отправить").gradient-btn.form__submit
+                  input(type="submit" value="send").gradient-btn.form__submit
         footer.footer
           .container.footer__container
             .footer__copyright
               .footer__copyright-col
                 .footer__copyright-year &copy; 2019
               .footer__copyright-userinfo
-                .footer__copyright-name Татьяна Жевак
-                .footer__data-text Личный сайт веб-разработчика
+                .footer__copyright-name Tatiana Zhevak
+                .footer__data-text Personal Web site
             .footer__data
               include templates/components/nav
               +nav('nav--color-white')
               .footer__data-content
                 .footer__data-col
                   article.footer__text
-                    p Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
+                    p 
                   .footer__data-socials
                     include templates/components/socials
                     +socials('footer__socials socials--rounded')
                 .footer__data-col
                   .text-quote
                     article.text-quote__text
-                      p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
-                    .text-quote__author Martin Golding
+                      p Every great developer you know got there by solving problems they were unqualified to solve until they actually did it
+                    .text-quote__author Patrick McKenzie
     include ./templates/entry.pug
 
                 
