added links to footer

--- a/src/index.pug
+++ b/src/index.pug
@@ -58,10 +58,10 @@ html(lang="en")
                 .about__welcome.simple-text Hi, my name is
                 .about__username Tatiana Zhevak
                 .about__desc.simple-text
-                  p and I want to start my developer career
+                  p and I want to transition from Test Developer to Software Developer
                 .about__ps
                   span * 
-                  p I have created this CV to show what I can do as a web developer (I'm still working on improvements)
+                  p I have created this CV to show what I can do as a web developer (I'm constantly updating and improving this site)
           .triangles.triangles_top
             svg(viewBox="0 0 1000 100" preserveAspectRatio="none").triangles__shape.triangles__shape_left
               polygon(points="0,0 0,100 1000,100")
