--- a/src/templates/components/nav.pug
+++ b/src/templates/components/nav.pug
@@ -1,7 +1,7 @@
 mixin nav(classes)
   nav(class=`${classes}`)
     ul.nav__list
-      - var menu = ['Main', 'About me', 'Skills', 'Examples', 'Contact me'];
+      - var menu = ['Home', 'About me', 'Skills', 'Examples', 'Contact me'];
       each item in menu
         li.nav__item
           a(href="").nav__link #{item}
